--- a/Code/2 - Evaluation.ipynb
+++ b/Code/2 - Evaluation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        "99718"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -133,47 +133,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "numero_simulation = 9\n",
+    "numero_simulation = 13\n",
     "derniere_epoch = 10\n",
     "seed = 15"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.1868131868131868,\n",
-       " 0.37912087912087916,\n",
-       " 0.4340659340659341,\n",
-       " 0.47802197802197804,\n",
-       " 0.5439560439560439,\n",
-       " 0.5054945054945055,\n",
-       " 0.532967032967033,\n",
-       " 0.5274725274725275,\n",
-       " 0.6538461538461539,\n",
-       " 0.6758241758241759]"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "all_cor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -282,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,12 +262,13 @@
     "        word_distance = (cos_distance(mot_poids[word1],(mot_poids[word2])))\n",
     "    else:\n",
     "        word_distance = float('nan')\n",
-    "    return word_distance"
+    "    return word_distance\n",
+    "distance_mots_v = np.vectorize(distance_mots)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -336,106 +308,106 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Pas de seed</th>\n",
-       "      <td>0.187</td>\n",
-       "      <td>0.379</td>\n",
-       "      <td>0.434</td>\n",
-       "      <td>0.478</td>\n",
-       "      <td>0.544</td>\n",
-       "      <td>0.505</td>\n",
-       "      <td>0.533</td>\n",
-       "      <td>0.527</td>\n",
-       "      <td>0.654</td>\n",
-       "      <td>0.676</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Seed 1</th>\n",
-       "      <td>0.231</td>\n",
        "      <td>0.181</td>\n",
-       "      <td>0.198</td>\n",
-       "      <td>0.110</td>\n",
-       "      <td>0.154</td>\n",
-       "      <td>0.022</td>\n",
-       "      <td>0.016</td>\n",
-       "      <td>0.049</td>\n",
-       "      <td>0.082</td>\n",
-       "      <td>0.049</td>\n",
+       "      <td>0.165</td>\n",
+       "      <td>0.236</td>\n",
+       "      <td>0.253</td>\n",
+       "      <td>0.302</td>\n",
+       "      <td>0.121</td>\n",
+       "      <td>0.099</td>\n",
+       "      <td>0.143</td>\n",
+       "      <td>0.060</td>\n",
+       "      <td>0.104</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Seed 5</th>\n",
-       "      <td>0.654</td>\n",
-       "      <td>0.599</td>\n",
-       "      <td>0.626</td>\n",
-       "      <td>0.621</td>\n",
-       "      <td>0.604</td>\n",
-       "      <td>0.610</td>\n",
-       "      <td>0.599</td>\n",
-       "      <td>0.571</td>\n",
-       "      <td>0.588</td>\n",
-       "      <td>0.544</td>\n",
+       "      <td>0.522</td>\n",
+       "      <td>0.549</td>\n",
+       "      <td>0.385</td>\n",
+       "      <td>0.412</td>\n",
+       "      <td>0.357</td>\n",
+       "      <td>0.368</td>\n",
+       "      <td>0.368</td>\n",
+       "      <td>0.412</td>\n",
+       "      <td>0.505</td>\n",
+       "      <td>0.527</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Seed 10</th>\n",
-       "      <td>0.082</td>\n",
-       "      <td>0.071</td>\n",
-       "      <td>-0.022</td>\n",
-       "      <td>-0.154</td>\n",
-       "      <td>-0.159</td>\n",
-       "      <td>-0.165</td>\n",
+       "      <td>0.110</td>\n",
        "      <td>-0.060</td>\n",
+       "      <td>-0.049</td>\n",
+       "      <td>-0.088</td>\n",
+       "      <td>-0.066</td>\n",
+       "      <td>-0.027</td>\n",
        "      <td>-0.077</td>\n",
-       "      <td>0.143</td>\n",
-       "      <td>0.159</td>\n",
+       "      <td>-0.022</td>\n",
+       "      <td>0.022</td>\n",
+       "      <td>-0.005</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Seed 15</th>\n",
-       "      <td>0.588</td>\n",
-       "      <td>0.593</td>\n",
-       "      <td>0.593</td>\n",
-       "      <td>0.709</td>\n",
        "      <td>0.555</td>\n",
-       "      <td>0.533</td>\n",
        "      <td>0.549</td>\n",
-       "      <td>0.473</td>\n",
-       "      <td>0.473</td>\n",
-       "      <td>0.473</td>\n",
+       "      <td>0.516</td>\n",
+       "      <td>0.467</td>\n",
+       "      <td>0.214</td>\n",
+       "      <td>0.286</td>\n",
+       "      <td>0.297</td>\n",
+       "      <td>0.181</td>\n",
+       "      <td>0.401</td>\n",
+       "      <td>0.412</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Seed 20</th>\n",
-       "      <td>0.549</td>\n",
-       "      <td>0.538</td>\n",
-       "      <td>0.549</td>\n",
+       "      <td>0.582</td>\n",
+       "      <td>0.555</td>\n",
+       "      <td>0.505</td>\n",
+       "      <td>0.473</td>\n",
        "      <td>0.522</td>\n",
-       "      <td>0.407</td>\n",
-       "      <td>0.522</td>\n",
-       "      <td>0.478</td>\n",
-       "      <td>0.516</td>\n",
+       "      <td>0.489</td>\n",
        "      <td>0.484</td>\n",
-       "      <td>0.516</td>\n",
+       "      <td>0.484</td>\n",
+       "      <td>0.484</td>\n",
+       "      <td>0.566</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Seed 25</th>\n",
+       "      <td>-0.209</td>\n",
+       "      <td>-0.176</td>\n",
+       "      <td>-0.088</td>\n",
+       "      <td>-0.159</td>\n",
+       "      <td>-0.236</td>\n",
+       "      <td>-0.203</td>\n",
+       "      <td>-0.148</td>\n",
+       "      <td>-0.143</td>\n",
+       "      <td>-0.022</td>\n",
+       "      <td>-0.088</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             Epoch 1  Epoch 2  Epoch 3  Epoch 4  Epoch 5  Epoch 6  Epoch 7  \\\n",
-       "Pas de seed    0.187    0.379    0.434    0.478    0.544    0.505    0.533   \n",
-       "Seed 1         0.231    0.181    0.198    0.110    0.154    0.022    0.016   \n",
-       "Seed 5         0.654    0.599    0.626    0.621    0.604    0.610    0.599   \n",
-       "Seed 10        0.082    0.071   -0.022   -0.154   -0.159   -0.165   -0.060   \n",
-       "Seed 15        0.588    0.593    0.593    0.709    0.555    0.533    0.549   \n",
-       "Seed 20        0.549    0.538    0.549    0.522    0.407    0.522    0.478   \n",
+       "         Epoch 1  Epoch 2  Epoch 3  Epoch 4  Epoch 5  Epoch 6  Epoch 7  \\\n",
+       "Seed 1     0.181    0.165    0.236    0.253    0.302    0.121    0.099   \n",
+       "Seed 5     0.522    0.549    0.385    0.412    0.357    0.368    0.368   \n",
+       "Seed 10    0.110   -0.060   -0.049   -0.088   -0.066   -0.027   -0.077   \n",
+       "Seed 15    0.555    0.549    0.516    0.467    0.214    0.286    0.297   \n",
+       "Seed 20    0.582    0.555    0.505    0.473    0.522    0.489    0.484   \n",
+       "Seed 25   -0.209   -0.176   -0.088   -0.159   -0.236   -0.203   -0.148   \n",
        "\n",
-       "             Epoch 8  Epoch 9  Epoch 10  \n",
-       "Pas de seed    0.527    0.654     0.676  \n",
-       "Seed 1         0.049    0.082     0.049  \n",
-       "Seed 5         0.571    0.588     0.544  \n",
-       "Seed 10       -0.077    0.143     0.159  \n",
-       "Seed 15        0.473    0.473     0.473  \n",
-       "Seed 20        0.516    0.484     0.516  "
+       "         Epoch 8  Epoch 9  Epoch 10  \n",
+       "Seed 1     0.143    0.060     0.104  \n",
+       "Seed 5     0.412    0.505     0.527  \n",
+       "Seed 10   -0.022    0.022    -0.005  \n",
+       "Seed 15    0.181    0.401     0.412  \n",
+       "Seed 20    0.484    0.484     0.566  \n",
+       "Seed 25   -0.143   -0.022    -0.088  "
       ]
      },
-     "execution_count": 146,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,27 +466,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'to_markdown'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-153-463a3ca2065e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mall_cor_export\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall_cor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdropna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m##Il faut installer pandas 1.0 was released 29 january 2020\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mall_cor_export\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_markdown\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5177\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5178\u001b[0m         \u001b[0;34m-\u001b[0m \u001b[0mfunction\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5179\u001b[0;31m         \u001b[0;34m-\u001b[0m \u001b[0mstring\u001b[0m \u001b[0mfunction\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5180\u001b[0m         \u001b[0;34m-\u001b[0m \u001b[0mlist\u001b[0m \u001b[0mof\u001b[0m \u001b[0mfunctions\u001b[0m \u001b[0;32mand\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;32mor\u001b[0m \u001b[0mfunction\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0;34m'sqrt'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5181\u001b[0m         \u001b[0;34m-\u001b[0m \u001b[0mdict\u001b[0m \u001b[0mof\u001b[0m \u001b[0maxis\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mfunctions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfunction\u001b[0m \u001b[0mnames\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mlist\u001b[0m \u001b[0mof\u001b[0m \u001b[0msuch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'to_markdown'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|         |   Epoch 1 |   Epoch 2 |   Epoch 3 |   Epoch 4 |   Epoch 5 |   Epoch 6 |   Epoch 7 |   Epoch 8 |   Epoch 9 |   Epoch 10 |\n",
+      "|:--------|----------:|----------:|----------:|----------:|----------:|----------:|----------:|----------:|----------:|-----------:|\n",
+      "| Seed 1  |     0.181 |     0.165 |     0.236 |     0.253 |     0.302 |     0.121 |     0.099 |     0.143 |     0.06  |      0.104 |\n",
+      "| Seed 5  |     0.522 |     0.549 |     0.385 |     0.412 |     0.357 |     0.368 |     0.368 |     0.412 |     0.505 |      0.527 |\n",
+      "| Seed 10 |     0.11  |    -0.06  |    -0.049 |    -0.088 |    -0.066 |    -0.027 |    -0.077 |    -0.022 |     0.022 |     -0.005 |\n",
+      "| Seed 15 |     0.555 |     0.549 |     0.516 |     0.467 |     0.214 |     0.286 |     0.297 |     0.181 |     0.401 |      0.412 |\n",
+      "| Seed 20 |     0.582 |     0.555 |     0.505 |     0.473 |     0.522 |     0.489 |     0.484 |     0.484 |     0.484 |      0.566 |\n",
+      "| Seed 25 |    -0.209 |    -0.176 |    -0.088 |    -0.159 |    -0.236 |    -0.203 |    -0.148 |    -0.143 |    -0.022 |     -0.088 |\n"
      ]
     }
    ],
    "source": [
-    "##Il faut installer pandas 1.0 was released 29 january 2020\n",
-    "all_cor_export.to_markdown()"
+    "##Il faut installer pandas 1.0 et tabulate\n",
+    "print(all_cor_export.to_markdown())"
    ]
   },
   {
