--- a/Code/0 - Formatage donnees.ipynb
+++ b/Code/0 - Formatage donnees.ipynb
@@ -161,7 +161,7 @@
    "source": [
     "# On ne garde que les tweets de 2 mots ou plus\n",
     "corpus_trie = [phrase for phrase in corpus_trie if len(phrase.split())>=2]\n",
-    "with open(\"data/corpus_trie.file\", \"wb\") as f:\n",
+    "with open(\"data/corpus_trieens.file\", \"wb\") as f:\n",
     "    pickle.dump(corpus_trie, f, pickle.HIGHEST_PROTOCOL)"
    ]
   },
