--- a/Redaction/Rapport_Final/Brouillons/Romain/Parties_Romain.Rmd
+++ b/Redaction/Rapport_Final/Brouillons/Romain/Parties_Romain.Rmd
@@ -78,15 +78,15 @@ On peut commencer par remarquer que si l'on centre et/ou réduit notre matrice d
 On notera dans la suite $Y = (y_{ij})$ la matrice des données centrées et $Z = (z_{ij})$ celle des données centrées et réduites.
 
 
-La dispersion du nuage de points se mesure grâce à l'inertie, que l'on définit comme $I(X) = \frac{1}{n} \sum \limits_{i = 1}^n d^2(x_i,\bar{x})$.
-C'est une génération de la notion de variance dans le cadre multivarié et c'est cette quantité que l'ACP cherche à représenter au mieux sur les axes factoriels.
+La dispersion du nuage de points se mesure grâce à l'inertie, que l'on définit comme $$I(X) = \frac{1}{n} \sum \limits_{i = 1}^n d^2(x_i,\bar{x})$$.
+C'est une généralisation de la notion de variance dans le cadre multivarié et c'est cette quantité que l'ACP cherche à représenter au mieux sur les axes factoriels.
 
 
 Considérons désormais la métrique $N = diag(\frac{1}{n},...,\frac{1}{n})$, on peut alors définir le produit scalaire $<x,y> = x\,^t N y$.
 En notant $x^j$ la vecteur pour la $j$-ème variable, on a $var(x^j) = \left\| y^j  \right\|^2$ et de même $var(z^j) = \left\| z^j  \right\|^2$.
 
 Pour trouver les axes de l'ACP, on va désormais procéder par projection orthogonale. Rappelons que les coordonnées de projection des $n$ individus sur une droite de vecteur directeur $v_\alpha$ est $f^\alpha = Zv_\alpha$.
-Nous allons donc chercher un vecteur $v_1$ vecteur directeur du premier axe tel que $$v_1 =\underset{ \left\| v  \right\| = 1}{\mathrm{argmin}} Var(Zv) =\underset{ \left\| v  \right\| = 1}{\mathrm{argmin}} v\,^t R v $$ où $R = \frac{1}{n} Z\,^t Z$ est la matrice des corrélations entre les p variables.
+Nous allons donc chercher un vecteur $v_1$ vecteur directeur du premier axe tel que $$v_1 =\underset{ \left\| v  \right\| = 1}{\mathrm{argmin~}} Var(Zv) =\underset{ \left\| v  \right\| = 1}{\mathrm{argmin~}} v\,^t R v $$ où $R = \frac{1}{n} Z\,^t Z$ est la matrice des corrélations entre les p variables.
 On peut alors montrer que $v_1$ est un vecteur propre associé à la première valeur propre $\lambda_1$ de $R$.
 Il reste à trouver $v_2$ orthogonal à $v_1$ tel quel l'intertie soit maximisée :
 $$v_2 =\underset{ \left\| v  \right\| = 1, v \perp v_1}{\mathrm{argmin}} Var(Zv) $$
