--- a/Redaction/Rapport_Final/Brouillons/Romain/Parties_Romain.tex
+++ b/Redaction/Rapport_Final/Brouillons/Romain/Parties_Romain.tex
@@ -137,8 +137,8 @@ dans la suite \(Y = (y_{ij})\) la matrice des données centrées et
 
 La dispersion du nuage de points se mesure grâce à l'inertie, que l'on
 définit comme
-\(I(X) = \frac{1}{n} \sum \limits_{i = 1}^n d^2(x_i,\bar{x})\). C'est
-une génération de la notion de variance dans le cadre multivarié et
+\[I(X) = \frac{1}{n} \sum \limits_{i = 1}^n d^2(x_i,\bar{x})\]. C'est
+une généralisation de la notion de variance dans le cadre multivarié et
 c'est cette quantité que l'ACP cherche à représenter au mieux sur les
 axes factoriels.
 
@@ -153,7 +153,7 @@ orthogonale. Rappelons que les coordonnées de projection des \(n\)
 individus sur une droite de vecteur directeur \(v_\alpha\) est
 \(f^\alpha = Zv_\alpha\). Nous allons donc chercher un vecteur \(v_1\)
 vecteur directeur du premier axe tel que
-\[v_1 =\underset{ \left\| v  \right\| = 1}{\mathrm{argmin}} Var(Zv) =\underset{ \left\| v  \right\| = 1}{\mathrm{argmin}} v\,^t R v \]
+\[v_1 =\underset{ \left\| v  \right\| = 1}{\mathrm{argmin~}} Var(Zv) =\underset{ \left\| v  \right\| = 1}{\mathrm{argmin~}} v\,^t R v \]
 où \(R = \frac{1}{n} Z\,^t Z\) est la matrice des corrélations entre les
 p variables. On peut alors montrer que \(v_1\) est un vecteur propre
 associé à la première valeur propre \(\lambda_1\) de \(R\). Il reste à
