màj modele gensim et eval kim 13/03

--- a/Code/3 - Lancement model word2vec de gensim.ipynb
+++ b/Code/3 - Lancement model word2vec de gensim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,17 +35,21 @@
     "\n",
     "import pickle\n",
     "\n",
+    "import gensim\n",
+    "from gensim.models import word2vec\n",
+    "\n",
     "#os.chdir('C:/Users/torna/Documents/StatApp/StatApp')\n",
     "#os.chdir('/Users/alainquartierlatente/Desktop/Ensae/StatApp')\n",
     "#os.chdir('/home/aqlt/Documents/Ensae/StatApp')\n",
     "os.chdir('C:/Users/Kim Antunez/Documents/Projets_autres/StatApp')\n",
     "\n",
+    "#nom_dossier = \"ens\"\n",
     "nom_dossier = \"100k\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -70,20 +74,22 @@
    "metadata": {},
    "source": [
     "# Lancement du modèle\n",
-    "Paramètres fixés : la dimension, le nombre de mots tirés dans le *negative sampling* et la proba utilisé, l'affichage du graphique"
+    "\n",
+    "### Nouvelle simulation \n",
+    "\n",
+    "Paramètres fixés : la dimension, le nombre de mots tirés dans le *negative sampling* et la proba utilisé"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "if nom_dossier == \"ens\":\n",
-    "    dim = 50\n",
+    "    dim = 20 #50\n",
     "else:\n",
-    "    dim = 20\n",
-    "plot = True"
+    "    dim = 20"
    ]
   },
   {
@@ -95,33 +101,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "epoch = 100\n",
-    "learning_rate = 0.02\n",
-    "window = 5\n",
-    "numero_simulation = 12\n",
     "seeds = [1, 5, 10, 15, 20, 25]\n",
-    "#seeds = [1]"
+    "epoch = 100\n",
+    "window = 3\n",
+    "learning_rate = 0.01\n",
+    "numero_simulation = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "seed 1  :  1.25\n",
-      "seed 5  :  1.11\n",
-      "seed 10  :  1.02\n",
-      "seed 15  :  1.02\n",
-      "seed 20  :  1.03\n",
-      "seed 25  :  1.1\n"
+      "seed 1  :  0.43\n"
      ]
     }
    ],
@@ -140,11 +140,11 @@
     "\n",
     "    start = time.time()\n",
     "\n",
-    "    from gensim.models import word2vec\n",
-    "    model = word2vec.Word2Vec(phrases, size=dim, window=window,negative=5,alpha=learning_rate,seed=seed,\n",
+    "    model = word2vec.Word2Vec(phrases, size=dim, window=window,negative=5,\n",
+    "                              alpha=learning_rate,min_alpha=learning_rate, seed=seed,\n",
     "                      min_count=0, workers=4, iter=epoch)\n",
     "    # Kim : j'ai mis min_count = 0 et non 5 car sinon on obtenait pas le même voc que dans NOTRE modele. a creuser\n",
-    "\n",
+    "    \n",
     "    end = time.time()\n",
     "    # Affichage temps de tournage du modèle\n",
     "    print(\"seed\", seed, \" : \", round((end - start)/60, 2))\n",
@@ -156,6 +156,112 @@
     "        os.mkdir(chemin)\n",
     "\n",
     "    model.save(chemin + \"/word2vec.model\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Simulation déjà effectuée (faire de nouvelles epoch)\n",
+    "\n",
+    "Paramètres à modifier :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epoch = 1 #Nouveau nombre d'epoch à effectuer\n",
+    "learning_rate = 0.01\n",
+    "numero_simulation = 100\n",
+    "seed = 1\n",
+    "version = 1 #version du fichier à modifier : pex version = \"1\" pour word2vec1.model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-7:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Kim Antunez\\Anaconda3\\lib\\threading.py\", line 926, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\Kim Antunez\\Anaconda3\\lib\\threading.py\", line 870, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\Kim Antunez\\Anaconda3\\lib\\site-packages\\gensim\\models\\base_any2vec.py\", line 211, in _worker_loop\n",
+      "    tally, raw_tally = self._do_train_job(data_iterable, job_parameters, thread_private_mem)\n",
+      "  File \"C:\\Users\\Kim Antunez\\Anaconda3\\lib\\site-packages\\gensim\\models\\word2vec.py\", line 821, in _do_train_job\n",
+      "    tally += train_batch_cbow(self, sentences, alpha, work, neu1, self.compute_loss)\n",
+      "  File \"gensim/models/word2vec_inner.pyx\", line 622, in gensim.models.word2vec_inner.train_batch_cbow\n",
+      "  File \"gensim/models/word2vec_inner.pyx\", line 489, in gensim.models.word2vec_inner.init_w2v_config\n",
+      "TypeError: object of type 'NoneType' has no len()\n",
+      "\n",
+      "Exception in thread Thread-8:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Kim Antunez\\Anaconda3\\lib\\threading.py\", line 926, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\Kim Antunez\\Anaconda3\\lib\\threading.py\", line 870, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\Kim Antunez\\Anaconda3\\lib\\site-packages\\gensim\\models\\base_any2vec.py\", line 211, in _worker_loop\n",
+      "    tally, raw_tally = self._do_train_job(data_iterable, job_parameters, thread_private_mem)\n",
+      "  File \"C:\\Users\\Kim Antunez\\Anaconda3\\lib\\site-packages\\gensim\\models\\word2vec.py\", line 821, in _do_train_job\n",
+      "    tally += train_batch_cbow(self, sentences, alpha, work, neu1, self.compute_loss)\n",
+      "  File \"gensim/models/word2vec_inner.pyx\", line 622, in gensim.models.word2vec_inner.train_batch_cbow\n",
+      "  File \"gensim/models/word2vec_inner.pyx\", line 489, in gensim.models.word2vec_inner.init_w2v_config\n",
+      "TypeError: object of type 'NoneType' has no len()\n",
+      "Exception in thread Thread-9:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Kim Antunez\\Anaconda3\\lib\\threading.py\", line 926, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\Kim Antunez\\Anaconda3\\lib\\threading.py\", line 870, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\Kim Antunez\\Anaconda3\\lib\\site-packages\\gensim\\models\\base_any2vec.py\", line 211, in _worker_loop\n",
+      "    tally, raw_tally = self._do_train_job(data_iterable, job_parameters, thread_private_mem)\n",
+      "  File \"C:\\Users\\Kim Antunez\\Anaconda3\\lib\\site-packages\\gensim\\models\\word2vec.py\", line 821, in _do_train_job\n",
+      "    tally += train_batch_cbow(self, sentences, alpha, work, neu1, self.compute_loss)\n",
+      "  File \"gensim/models/word2vec_inner.pyx\", line 622, in gensim.models.word2vec_inner.train_batch_cbow\n",
+      "  File \"gensim/models/word2vec_inner.pyx\", line 489, in gensim.models.word2vec_inner.init_w2v_config\n",
+      "TypeError: object of type 'NoneType' has no len()\n",
+      "Exception in thread Thread-6:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\Kim Antunez\\Anaconda3\\lib\\threading.py\", line 926, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Users\\Kim Antunez\\Anaconda3\\lib\\threading.py\", line 870, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\Kim Antunez\\Anaconda3\\lib\\site-packages\\gensim\\models\\base_any2vec.py\", line 211, in _worker_loop\n",
+      "    tally, raw_tally = self._do_train_job(data_iterable, job_parameters, thread_private_mem)\n",
+      "  File \"C:\\Users\\Kim Antunez\\Anaconda3\\lib\\site-packages\\gensim\\models\\word2vec.py\", line 821, in _do_train_job\n",
+      "    tally += train_batch_cbow(self, sentences, alpha, work, neu1, self.compute_loss)\n",
+      "  File \"gensim/models/word2vec_inner.pyx\", line 622, in gensim.models.word2vec_inner.train_batch_cbow\n",
+      "  File \"gensim/models/word2vec_inner.pyx\", line 489, in gensim.models.word2vec_inner.init_w2v_config\n",
+      "TypeError: object of type 'NoneType' has no len()\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "chemin = \"data/\" + nom_dossier + \"/gensim/Simulation_\" + str(numero_simulation) + \"_seed\" + str(seed)       \n",
+    "model = gensim.models.keyedvectors.KeyedVectors.load(chemin + \"/word2vec\" + str(version) +\".model\")  \n",
+    "\n",
+    "start = time.time()\n",
+    "\n",
+    "#### NE MARCHE PAS ! \n",
+    "#model.train(phrases, epochs=epoch, total_examples=model.corpus_count, \n",
+    "#            start_alpha=learning_rate, end_alpha=learning_rate) #, compute_loss=True\n",
+    "   \n",
+    "end = time.time()\n",
+    "\n",
+    "# Sauvegarde \n",
+    "#model.save(chemin + \"/word2vec\" + str(version+1) +\".model\")"
    ]
   },
   {
@@ -256,6 +362,18 @@
    ],
    "source": [
     "model.similarity(\"homme\",\"femme\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Biblio : \n",
+    "    \n",
+    "https://machinelearningmastery.com/develop-word-embeddings-python-gensim/\n",
+    "http://kavita-ganesan.com/how-to-incorporate-phrases-into-word2vec-a-text-mining-approach/#.XmvT7XIiE2x\n",
+    "https://rare-technologies.com/word2vec-tutorial/\n",
+    "https://radimrehurek.com/gensim/models/word2vec.html"
    ]
   }
  ],
