--- a/Code/2B - Lancement_modele_gensim.ipynb
+++ b/Code/2B - Lancement_modele_gensim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,29 +34,30 @@
     "import torch.autograd as autograd\n",
     "\n",
     "import pickle\n",
+    "import datetime\n",
     "\n",
     "import gensim\n",
     "from gensim.models import word2vec\n",
     "\n",
     "#os.chdir('C:/Users/torna/Documents/StatApp/StatApp')\n",
-    "#os.chdir('/Users/alainquartierlatente/Desktop/Ensae/StatApp')\n",
+    "os.chdir('/Users/alainquartierlatente/Desktop/Ensae/StatApp')\n",
     "#os.chdir('/home/aqlt/Documents/Ensae/StatApp')\n",
-    "os.chdir('C:/Users/Kim Antunez/Documents/Projets_autres/StatApp')\n",
+    "#os.chdir('C:/Users/Kim Antunez/Documents/Projets_autres/StatApp')\n",
     "\n",
-    "#nom_dossier = \"ens\"\n",
-    "nom_dossier = \"100k\""
+    "nom_dossier = \"ens\"\n",
+    "#nom_dossier = \"100k\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "99718\n"
+      "1348627\n"
      ]
     }
    ],
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,27 +102,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "seeds = [1, 5, 10, 15, 20, 25]\n",
-    "epoch = 100\n",
-    "window = 3\n",
+    "epoch = 10\n",
+    "window = 4\n",
     "learning_rate = 0.01\n",
-    "numero_simulation = 1"
+    "numero_simulation = 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "seed 1  :  0.43\n"
+      "seed 1  à 23:49 : 1.41\n"
      ]
     }
    ],
@@ -147,15 +148,37 @@
     "    \n",
     "    end = time.time()\n",
     "    # Affichage temps de tournage du modèle\n",
-    "    print(\"seed\", seed, \" : \", round((end - start)/60, 2))\n",
+    "    currentDT = datetime.datetime.now()\n",
+    "    print(\"seed {} à {}:{} : {}\".format(seed, currentDT.hour, currentDT.minute, round((end - start)/60, 2)))\n",
     "\n",
     "    # Sauvegarde \n",
-    "    chemin = \"data/\" + nom_dossier + \"/gensim/Simulation_\" + str(numero_simulation) +\"_seed\"+ str(seed)\n",
-    "\n",
+    "    chemin = \"data/{}/gensim/dim{}_ep{}_lr{}_w{}_seed{}\".format(nom_dossier, dim, epoch, str(learning_rate)[2:], window, seed)\n",
     "    if not os.path.isdir(chemin):\n",
     "        os.mkdir(chemin)\n",
     "\n",
     "    model.save(chemin + \"/word2vec.model\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'data/ens/gensim/dim20_ep10_lr01_w3_seed25'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chemin = \"data/{}/gensim/dim{}_ep{}_lr{}_w{}_seed{}\".format(nom_dossier, dim, epoch, str(learning_rate)[2:], window, seed)\n",
+    "\n",
+    "chemin"
    ]
   },
   {
@@ -393,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
